fix skill icon text in dark mode by considering dark theme

--- a/src/components/softwareSkills/SoftwareSkill.css
+++ b/src/components/softwareSkills/SoftwareSkill.css
@@ -24,6 +24,10 @@
   color: #222;
   font-size: 10px;
 }
+.dark-mode-skill > p {
+  color: #868e96;
+  font-size: 10px;
+  }
 .software-skill-inline > i:hover ~ p {
   color: #645beb;
 }
